[package]
name = "ponyrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.22", features = ["derive"] }
colored = "2.0.0"
json = "0.12.4"
textwrap = "0.16.0"
